# rs-voice-toolkit

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PUBLISH_GUIDE.md  README.md  RELEASE.md  publish-all.sh  publish-crate.sh  publish.sh
.claude/: settings.local.json
.cursor/rules/: rules.mdc
.github/workflows/: ci.yml
audio/: CHANGELOG.md  Cargo.toml
audio/src/: lib.rs
docs/: release-guide.md  streaming-transcription.md  streaming-usage.md  stt-performance-baseline.md  stt-usage.md  tts-usage.md  vad-usage.md
fixtures/: README.md  get-fixtures.sh
fixtures/audio/: bank_audio.m4a
specs/: audio-module-merge-plan.md  design.md  improvements-tasks.md  improvements.md  perf.md  requirements.md  streaming.md  stt-performance-baseline.md  tasks.md
stt/: CHANGELOG.md  Cargo.toml
stt/examples/: bench_transcribe.rs  performance_baseline.rs  streaming_transcribe.rs  transcribe_file.rs  transcribe_with_vad.rs
stt/src/: error.rs  lib.rs  streaming.rs  vad.rs  whisper.rs
stt/src/audio/: converter.rs  mod.rs  resampler.rs  utils.rs
tests/: Cargo.toml  integration_tests.rs  performance_tests.rs
tests/performance_results/: Audio_Processing_20250821_160232.json  STT_File_Transcription_20250821_160232.json
tts/: CHANGELOG.md  Cargo.toml
tts/examples/: synthesize.rs
tts/src/: lib.rs
video/: Cargo.toml
video/src/: lib.rs
voice-toolkit/: Cargo.toml
voice-toolkit/examples/: streaming_examples.rs  usage_examples.rs
voice-toolkit/src/: error.rs  lib.rs
