[package]
name = "rs-voice-toolkit-audio"
version = "0.1.0"
description = "Audio processing utilities for rs-voice-toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rs-voice-toolkit"
keywords = ["audio", "processing", "resampling", "wav"]
categories = ["multimedia::audio"]
edition.workspace = true
authors.workspace = true

[lib]
name = "rs_voice_toolkit_audio"
path = "src/lib.rs"

[dependencies]
ez-ffmpeg = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hound = { workspace = true }
rubato = { workspace = true }

