[package]
name = "rs-voice-toolkit-audio"
version = "0.12.0"
description = "Audio processing utilities for rs-voice-toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soddygo/rs-voice-toolkit"
keywords = ["audio", "processing", "resampling", "wav"]
categories = ["multimedia::audio"]
edition.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
# 禁用 FFmpeg 相关的功能，因为 docs.rs 环境没有 FFmpeg
all-features = false
features = []

[lib]
name = "rs_voice_toolkit_audio"
path = "src/lib.rs"


[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hound = { workspace = true }
rubato = { workspace = true }
ffmpeg-sidecar = { workspace = true }


