[package]
name = "rs-voice-toolkit-stt"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "A Rust library for speech-to-text processing using Whisper"
keywords = ["speech", "whisper", "audio", "transcription", "stt"]

[dependencies]
# 从workspace继承依赖
whisper-rs = { workspace = true }
hound = { workspace = true }
ffmpeg-sidecar = { workspace = true }
rubato = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.30"
audio_utils = { package = "rs-voice-toolkit-audio", version = "0.8.0", path = "../audio" }

[features]
default = []
streaming = []

# ===================================================================
#  核心后端特性 (Core Backend Features)
#  这些是您在Docker脚本中可以直接使用的特性
#  例如: `cargo build --features cuda`
# ===================================================================
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal", "whisper-rs/coreml"]

[dev-dependencies]
env_logger = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
name = "rs_voice_toolkit_stt"
path = "src/lib.rs"
