[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rs-voice-toolkit-stt = { path = "../stt" }
rs-voice-toolkit-tts = { path = "../tts" }
rs-voice-toolkit-audio = { path = "../audio" }
voice-toolkit = { path = "../voice-toolkit" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "performance_tests"
path = "performance_tests.rs"