[package]
name = "rs-voice-toolkit-tts"
version = "0.3.0"
# publish = false
description = "Text-to-speech functionality for rs-voice-toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soddygo/rs-voice-toolkit"
keywords = ["speech", "synthesis", "tts", "text-to-speech"]
categories = ["multimedia::audio"]
edition.workspace = true
authors.workspace = true

[lib]
name = "rs_voice_toolkit_tts"
path = "src/lib.rs"

[dependencies]
# TTS相关依赖将在未来规划中添加
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
which = "8"
async-trait = "0.1"

[features]
default = []
# 未来可能的特性
# piper = ["onnxruntime"]
# rten = ["rten"]
