[package]
name = "voice-toolkit"
version = "0.4.0"
description = "A comprehensive Rust toolkit for voice processing including STT, TTS, and audio utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soddygo/rs-voice-toolkit"
keywords = ["voice", "speech", "audio", "stt", "tts"]
categories = ["multimedia::audio"]
edition.workspace = true
authors.workspace = true

[features]
default = ["stt", "audio"]
stt = ["dep:rs-voice-toolkit-stt"]
tts = ["dep:rs-voice-toolkit-tts"]
audio = ["dep:rs-voice-toolkit-audio"]
streaming = ["stt", "rs-voice-toolkit-stt/streaming"]
# GPU 加速特性
cuda = ["stt", "rs-voice-toolkit-stt/cuda"]
vulkan = ["stt", "rs-voice-toolkit-stt/vulkan"]
metal = ["stt", "rs-voice-toolkit-stt/metal"]

[dependencies]
rs-voice-toolkit-stt = { optional = true, version = "0.4.0", path = "../stt" }
rs-voice-toolkit-tts = { optional = true, version = "0.4.0", path = "../tts" }
rs-voice-toolkit-audio = { optional = true, version = "0.4.0", path = "../audio" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
